Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90628

[REG: 5.14.2->5.15.0]: When resizing a window that is translucent and using stylesheets then this can flicker quite a lot when the window is resized smaller

XMLWordPrintable

    • Windows
    • 005027fe0be64a7d3ed324a5e757bbf51bb42662 (qt/tqtc-qtbase/tqtc/lts-5.15.3)

      When resizing a window that is translucent and using stylesheets then this can flicker quite a lot when the window is resized smaller

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            andysh Andy Shaw
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes