Windows: Fix flicker when resizing translucent windows with QSizeGrip

Do not use the startSystemResize() functionality in that case.

Fixes: QTBUG-90628
Fixes: QTBUG-73011
Change-Id: I8d4843c1715c7f75f9b41c904e6f1aebbf0e02d7
Reviewed-by: Richard Moe Gustavsen <richard.gustavsen@qt.io>
(cherry picked from commit 90dc13ae5facf97a2760edf054d2e002d0eae5d9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>